--- a/rapport/titlepage.tex
+++ b/rapport/titlepage.tex
@@ -17,7 +17,7 @@
  %----------------------------------------------------------------------------------------
 
  \HRule \\[0.3cm]
- { \huge \bfseries Uppgift 3: Komplexitetsteori}\\[0.3cm] % Title of your document
+ { \huge \bfseries Komplexitetsteori}\\[0.3cm] % Title of your document
  \HRule \\[1.5cm]
   
   %----------------------------------------------------------------------------------------
