--- a/rapport/samling.tex
+++ b/rapport/samling.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{graphicx}
+\usepackage{amsmath}
 \usepackage{caption}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -12,7 +13,7 @@
 \newpage
 
 \input{oversikt.tex}
-\input{övning2.tex}
+\input{ovning2.tex}
 \input{sammanfattning.tex}
 \input{referenser.tex}
 \end{document}
