--- a/rapport/ovning2.tex
+++ b/rapport/ovning2.tex
@@ -45,7 +45,7 @@ Med hjälp av inducering fås.
 \\	&= 2^2[2T(N-3)+1] + 3	  \\  &= 2^3 T(N-3) + 7 
     $$
 \end{align*}
-Då k är antal induceringar för funktionen $ T(N) = 2^k T(N-k) + 2^k - 1 $
+Då k är antal ringar för funktionen $ T(N) = 2^k T(N-k) + 2^k - 1 $
 \\ När $ k \rightarrow N$ så fås tidsfunktionen 
 \begin{align*}
   $$   T(N) &= 2^N T(N-N) + 2^N - 1 \\
