--- a/rapport/ovning1.tex
+++ b/rapport/ovning1.tex
@@ -2,22 +2,42 @@
 \paragraph{Inledning}    
 Uppgiften går ut på att skapa och analyzera en turingmaskin som efter antal a:n i input lägger till inversen av en sträng med 0:or och 1:or till höger, startandes med 0 vilket ger 0 -> 01 -> 0110 osv.
 
-\paragraph{Beskrivning av maskinen}
+\paragraph{Beskrivning av turingmaskinen}
+Följande algoritm utvecklades för att lösa problemet.
 \begin{verbatim}
-1. gå höger tills \_, ersätt \_ med 0 
-    1.1 gå vänster tills \_, gå 3
+1. gå höger tills _, ersätt _ med 0 
+    1.1 gå vänster tills _, gå 3
 
-2. gå vänster tills \_
+2. gå vänster tills _
 3. gå ett steg höger, om ej a, avsluta 
-4. om a, ersätt a med \_ 
-    4.1 gå höger tills 0 eller 1, om \_ gå 4.2 
+4. om a, ersätt a med _ 
+    4.1 gå höger tills 0 eller 1, om _ gå 4.2 
         4.1.1a om 1, ersätt med y   
-           4.1.1a.1 gå höger tills \_, ersätt med x, gå 4.1.2  
+           4.1.1a.1 gå höger tills _, ersätt med x, gå 4.1.2  
         4.1.1b om 0, ersätt med x 
-        4.1.1b.1 gå höger tills \_, ersätt med y, gå 4.1.2 
+        4.1.1b.1 gå höger tills _, ersätt med y, gå 4.1.2 
 
-        4.1.2 gå vänster tills \_ eller a, gå 4.1  
+        4.1.2 gå vänster tills _ eller a, gå 4.1  
     
-    4.2 gå vänster tills \_ eller a, ersätt x med 0 och y med 1 på vägen 
+    4.2 gå vänster tills _ eller a, ersätt x med 0 och y med 1 på vägen 
     4.3 gå 2
 \end{verbatim}
+
+\paragraph{Tidskomplexitet av algoritm}
+
+\begin{center}
+    \includegraphics[width=\linewidth]{bilder/komplexitet_analys.jpg}
+    \captionof{figure}{Analys av komplexitet per del}
+\end{end}
+
+\begin{center}
+    \includegraphics[width=\linewidth]{bilder/komplexitet_utrakning.jpg}
+    \captionof{figure}{Uträkning av komplexiteten i O()}
+\end{end}
+Ur analysen framkommer det att algoritmen har tidskomplexiteten O($4^n$)
+
+Tidskomplexiteten ritades på en linje och jämfördes med flertal datapunkter från när maskinen kördes i simulatorn. 
+\begin{center}
+    \includegraphics[width=\linewidth]{bilder/graf.png}
+    \captionof{figure}{Graf som jämför datapunkter och den uträknade tidskomplexiteten. Y-axeln står för antalet steg och x-axeln för antalet a:n i indatan.}
+\end{end}
