--- a/rapport/oversikt.tex
+++ b/rapport/oversikt.tex
@@ -1,4 +1,8 @@
 \section{Inledning}
 
-\subsection{Antaganden}
+I denna inlämningsuppgift ingår två delar som i har största syfte att skapa bättre förståelse för
+komplexitetsteorin. Del 1 så görs en komplexitet bestämmas för en turing maskin, och redovisas.
+Del 2 skall algoritmen Tornen i Hanoi undersökas och dess tidskomplexitet framställas.
+
+
 
