--- a/rapport/ovning1.tex
+++ b/rapport/ovning1.tex
@@ -22,6 +22,7 @@ Följande algoritm utvecklades för att lösa problemet.
     4.2 gå vänster tills _ eller a, ersätt x med 0 och y med 1 på vägen 
     4.3 gå 2
 \end{verbatim}
+För tillståndsövergångar hos turingmaskinen se bilagosektionen.
 
 \paragraph{Tidskomplexitet av algoritm}
 
@@ -36,8 +37,9 @@ Följande algoritm utvecklades för att lösa problemet.
 \end{end}
 Ur analysen framkommer det att algoritmen har tidskomplexiteten O($4^n$)
 
-Tidskomplexiteten ritades på en linje och jämfördes med flertal datapunkter från när maskinen kördes i simulatorn. 
+Tidskomplexiteten ritades på en linje och jämfördes med flertal datapunkter från när maskinen kördes i simulatorn för att analysera hur korrekt komplexiteten var. 
 \begin{center}
     \includegraphics[width=\linewidth]{bilder/graf.png}
     \captionof{figure}{Graf som jämför datapunkter och den uträknade tidskomplexiteten. Y-axeln står för antalet steg och x-axeln för antalet a:n i indatan.}
 \end{end}
+Av grafen kan det bestämmas att O($4^n$) är den korrekta tidskomplexiteten för algoritmen. 
