--- a/rapport/ovning1.tex
+++ b/rapport/ovning1.tex
@@ -29,17 +29,17 @@ För tillståndsövergångar hos turingmaskinen se bilagosektionen.
 \begin{center}
     \includegraphics[width=\linewidth]{bilder/komplexitet_analys.jpg}
     \captionof{figure}{Analys av komplexitet per del}
-\end{end}
+\end{center}
 
 \begin{center}
     \includegraphics[width=\linewidth]{bilder/komplexitet_utrakning.jpg}
     \captionof{figure}{Uträkning av komplexiteten i O()}
-\end{end}
+\end{center}
 Ur analysen framkommer det att algoritmen har tidskomplexiteten O($4^n$)
 
 Tidskomplexiteten ritades på en linje och jämfördes med flertal datapunkter från när maskinen kördes i simulatorn för att analysera hur korrekt komplexiteten var. 
 \begin{center}
     \includegraphics[width=\linewidth]{bilder/graf.png}
     \captionof{figure}{Graf som jämför datapunkter och den uträknade tidskomplexiteten. Y-axeln står för antalet steg och x-axeln för antalet a:n i indatan.}
-\end{end}
+\end{center}
 Av grafen kan det bestämmas att O($4^n$) är den korrekta tidskomplexiteten för algoritmen. 
