--- a/rapport/ovning2.tex
+++ b/rapport/ovning2.tex
@@ -8,12 +8,12 @@ Regler:
 \item Lägg aldrig en större ring ovanpå en mindre.
 \end{enumerate}
 
-\newline
+\vspace{5mm}
 Given rekursiv algoritm:
 \begin{enumerate}
-	\item Flytta temporärt högen med N − 1 ringar från pinne A till pinne B.
+	\item Flytta temporärt högen med N - 1 ringar från pinne A till pinne B.
 	\item Flytta den största ringen (den enda ringen kvar på pinne A) till pinne C.
-	\item Flytta N − 1 ringar från pinne B till pinne C.
+	\item Flytta N - 1 ringar från pinne B till pinne C.
 \end{enumerate}
 
 \paragraph{Omskrivning}
