--- a/rapport/ovning1.tex
+++ b/rapport/ovning1.tex
@@ -22,8 +22,8 @@ Följande algoritm utvecklades för att lösa problemet.
     4.2 gå vänster tills _ eller a, ersätt x med 0 och y med 1 på vägen 
     4.3 gå 2
 \end{verbatim}
-För tillståndsövergångar hos turingmaskinen se bilagosektionen.
-
+För tillståndsövergångar hos turingmaskinen se [4] Bilagor.
+\newpage
 \paragraph{Tidskomplexitet av algoritm}
 
 \begin{center}
@@ -43,3 +43,4 @@ Tidskomplexiteten ritades på en linje och jämfördes med flertal datapunkter f
     \captionof{figure}{Graf som jämför datapunkter och den uträknade tidskomplexiteten. Y-axeln står för antalet steg och x-axeln för antalet a:n i indatan.}
 \end{center}
 Av grafen kan det bestämmas att O($4^n$) är den korrekta tidskomplexiteten för algoritmen. 
+\newpage
